<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- WebApp -->
    <string name="app_name">Cherry</string>
    <string name="shared_pref">de.live.gdev.cherrymusic</string>
    <string name="info_author">created by Gregor Santner</string>
    <string name="info_additionalContact">Cherry Homepage</string>
    <string name="page_additional_homepage">http://fomori.org/cherrymusic/</string>
    <string name="page_additional_homepage_short">fomori.org/cherrymusic</string>
    <string name="page_versioning">https://github.com/de-live-gdev/cherrymusic_android</string>
    <string name="page_author">https://github.com/de-live-gdev</string>
    <string name="pathToWebapp_tv_str">Path to CherryMusic:</string>
    <string name="pathToWebapp_hint">https://mypage.com:8080/cherry</string>
    
	<!-- All other strings -->
    <string name="versionName">1.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_info">About</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_info">About</string>
    
    <string name="no_valid_path"><![CDATA[<font size="38"><center><h1> No valid path </h1></center></font> <font size="25"><br> Please check your settings!</font>]]></string>
    <string name="ssl_webview_error_str"><![CDATA[<font size="38"><center><h1> Invalid SSL certificate </h1></center></font><font size="25"> <br> There is a option for accecpting all SSL certificates.<br><br><b> Caution:</b> Ignoring certificate errors is a security risk!</font>]]></string>
    <string name="ssl_toast_error">SSL certificate not accepted</string>
    
    <string name="exit">Exit</string>
    <string name="username_tv_str">Username:</string>
    <string name="password_tv_str">Password:</string>
    <string name="auto_login_str">Enable auto-login</string>
    <string name="ssl_cert_accept">Accept all SSL certificates</string>
    <string name="save_str">Save profile</string>
    <string name="save_settings_succ">Profile saved</string>
    <string name="time_tracker_settings_tv">Time Tracker Settings</string>
    <string name="standard_filename">Filename:</string>    
    <string name="profileSelection_str">Profile Selection</string>    
    <string name="profileDefault">Default</string>    
    <string name="profile2">Profile 2</string>    
    <string name="profile3">Profile 3</string>
    
</resources>