<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="540dp" >

            <EditText
                android:id="@+id/editTextWebappPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textview_Path_Text"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/pathToWebapp_hint" />

            <TextView
                android:id="@+id/textview_Path_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextWebappPath"
                android:text="@string/pathToWebapp_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textviewUsername_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextWebappPath"
                android:layout_below="@+id/editTextWebappPath"
                android:layout_marginTop="20dp"
                android:text="@string/username_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textviewPassword_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textviewUsername_Text"
                android:layout_below="@+id/textviewUsername_Text"
                android:layout_marginTop="20dp"
                android:text="@string/password_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textviewUsername_Text"
                android:layout_alignBottom="@+id/textviewUsername_Text"
                android:layout_alignLeft="@+id/edPassword"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:hint="username" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textviewPassword_Text"
                android:layout_alignBottom="@+id/textviewPassword_Text"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textview_Path_Text"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkboxAutologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textviewPassword_Text"
                android:layout_below="@+id/edPassword"
                android:layout_marginTop="27dp"
                android:text="@string/auto_login_str" />

            <CheckBox
                android:id="@+id/checkBoxAcceptAllSsl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkboxAutologin"
                android:layout_below="@+id/checkboxAutologin"
                android:text="@string/ssl_cert_accept" />

            <TextView
                android:id="@+id/textviewPofile_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBoxAcceptAllSsl"
                android:layout_below="@+id/checkBoxAcceptAllSsl"
                android:layout_marginTop="20dp"
                android:text="@string/profileSelection_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioProfiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textviewPofile_Text"
                android:layout_below="@+id/textviewPofile_Text"
                android:layout_marginTop="8dp" >

                <RadioButton
                    android:id="@+id/radioProfileDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/profileDefault" />

                <RadioButton
                    android:id="@+id/radioProfile2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile2" />

                <RadioButton
                    android:id="@+id/radioProfile3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile3" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonSaveSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/save_ico"
        		android:paddingLeft="10sp"
        		android:paddingRight="10sp"
        		android:drawablePadding="5sp"
                android:layout_below="@+id/radioProfiles"
                android:layout_centerHorizontal="true"
                android:onClick="onSaveButtonClicked"
                android:text="@string/save_str" />
        </RelativeLayout>

    </FrameLayout>

</ScrollView>